# ddsp-libtorch

./: .gitignore  CMakeLists.txt  JackConnection.cpp  JackConnection.h  main.cpp
modules/: FindJACK.cmake
